Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/ULightComponent.h

	
	DOTNET_EXPORT INT_PTR E_NewObject_ULightComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<ULightComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_ULightComponent_AffectsPrimitive(ULightComponent* Self, UPrimitiveComponent* Primitive)
	{
		auto _p0 = Primitive;
		return Self->AffectsPrimitive(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_GetBoundingBox(ULightComponent* Self)
	{
		return (INT_PTR) new FBox(Self->GetBoundingBox());
	}
	DOTNET_EXPORT auto E_ULightComponent_GetLightPosition(ULightComponent* Self)
	{
		return (INT_PTR) new FVector4(Self->GetLightPosition());
	}
	DOTNET_EXPORT auto E_ULightComponent_SetAffectDynamicIndirectLighting(ULightComponent* Self, bool bNewValue)
	{
		auto _p0 = bNewValue;
		Self->SetAffectDynamicIndirectLighting(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetAffectTranslucentLighting(ULightComponent* Self, bool bNewValue)
	{
		auto _p0 = bNewValue;
		Self->SetAffectTranslucentLighting(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetBloomScale(ULightComponent* Self, float NewValue)
	{
		auto _p0 = NewValue;
		Self->SetBloomScale(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetBloomThreshold(ULightComponent* Self, float NewValue)
	{
		auto _p0 = NewValue;
		Self->SetBloomThreshold(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetEnableLightShaftBloom(ULightComponent* Self, bool bNewValue)
	{
		auto _p0 = bNewValue;
		Self->SetEnableLightShaftBloom(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetForceCachedShadowsForMovablePrimitives(ULightComponent* Self, bool bNewValue)
	{
		auto _p0 = bNewValue;
		Self->SetForceCachedShadowsForMovablePrimitives(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetIndirectLightingIntensity(ULightComponent* Self, float NewIntensity)
	{
		auto _p0 = NewIntensity;
		Self->SetIndirectLightingIntensity(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetIntensity(ULightComponent* Self, float NewIntensity)
	{
		auto _p0 = NewIntensity;
		Self->SetIntensity(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetLightFunctionDisabledBrightness(ULightComponent* Self, float NewValue)
	{
		auto _p0 = NewValue;
		Self->SetLightFunctionDisabledBrightness(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetLightFunctionFadeDistance(ULightComponent* Self, float NewLightFunctionFadeDistance)
	{
		auto _p0 = NewLightFunctionFadeDistance;
		Self->SetLightFunctionFadeDistance(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetLightFunctionScale(ULightComponent* Self, INT_PTR NewLightFunctionScale)
	{
		auto _p0 = *(FVector*)NewLightFunctionScale;
		Self->SetLightFunctionScale(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetShadowBias(ULightComponent* Self, float NewValue)
	{
		auto _p0 = NewValue;
		Self->SetShadowBias(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetTemperature(ULightComponent* Self, float NewTemperature)
	{
		auto _p0 = NewTemperature;
		Self->SetTemperature(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_SetVolumetricScatteringIntensity(ULightComponent* Self, float NewIntensity)
	{
		auto _p0 = NewIntensity;
		Self->SetVolumetricScatteringIntensity(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_ApplyWorldOffset(ULightComponent* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_BeginDestroy(ULightComponent* Self)
	{
		Self->BeginDestroy();
	}
	DOTNET_EXPORT auto E_ULightComponent_CalcBoundingCylinder(ULightComponent* Self, float CylinderRadius, float CylinderHalfHeight)
	{
		auto _p0 = CylinderRadius;
		auto _p1 = CylinderHalfHeight;
		Self->CalcBoundingCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_CanAttachAsChild(ULightComponent* Self, USceneComponent* ChildComponent, char* SocketName)
	{
		auto _p0 = ChildComponent;
		auto _p1 = ConvertFromManage_FName(SocketName);
		return Self->CanAttachAsChild(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_DestroyComponent(ULightComponent* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_DetachFromComponent(ULightComponent* Self, INT_PTR DetachmentRules)
	{
		auto _p0 = *(FDetachmentTransformRules*)DetachmentRules;
		Self->DetachFromComponent(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_DetachFromParent(ULightComponent* Self, bool bMaintainWorldPosition, bool bCallModify)
	{
		auto _p0 = bMaintainWorldPosition;
		auto _p1 = bCallModify;
		Self->DetachFromParent(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_DoesSocketExist(ULightComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return Self->DoesSocketExist(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_GetCollisionObjectType(ULightComponent* Self)
	{
		return Self->GetCollisionObjectType();
	}
	DOTNET_EXPORT auto E_ULightComponent_GetCollisionResponseToChannel(ULightComponent* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetCollisionResponseToChannel(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_GetComponentVelocity(ULightComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetComponentVelocity());
	}
	DOTNET_EXPORT auto E_ULightComponent_GetSocketLocation(ULightComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FVector(Self->GetSocketLocation(_p0));
	}
	DOTNET_EXPORT auto E_ULightComponent_GetSocketQuaternion(ULightComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FQuat(Self->GetSocketQuaternion(_p0));
	}
	DOTNET_EXPORT auto E_ULightComponent_GetSocketRotation(ULightComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FRotator(Self->GetSocketRotation(_p0));
	}
	DOTNET_EXPORT auto E_ULightComponent_GetSocketTransform(ULightComponent* Self, char* InSocketName, ERelativeTransformSpace TransformSpace)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		auto _p1 = TransformSpace;
		return (INT_PTR) new FTransform(Self->GetSocketTransform(_p0, _p1));
	}
	DOTNET_EXPORT auto E_ULightComponent_HasAnySockets(ULightComponent* Self)
	{
		return Self->HasAnySockets();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsAnySimulatingPhysics(ULightComponent* Self)
	{
		return Self->IsAnySimulatingPhysics();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsPrecomputedLightingValid(ULightComponent* Self)
	{
		return Self->IsPrecomputedLightingValid();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsSimulatingPhysics(ULightComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->IsSimulatingPhysics(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_IsVisible(ULightComponent* Self)
	{
		return Self->IsVisible();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsVisibleInEditor(ULightComponent* Self)
	{
		return Self->IsVisibleInEditor();
	}
	DOTNET_EXPORT auto E_ULightComponent_IsWorldGeometry(ULightComponent* Self)
	{
		return Self->IsWorldGeometry();
	}
	DOTNET_EXPORT auto E_ULightComponent_MoveComponentImpl(ULightComponent* Self, INT_PTR Delta, INT_PTR NewRotation, bool bSweep, INT_PTR Hit, EMoveComponentFlags MoveFlags, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FQuat*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)Hit;
		auto _p4 = MoveFlags;
		auto _p5 = Teleport;
		return ((E_PROTECTED_WRAP_ULightComponent*)Self)->MoveComponentImpl_WRAP(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_ULightComponent_OnAttachmentChanged(ULightComponent* Self)
	{
		Self->OnAttachmentChanged();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnChildAttached(ULightComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_ULightComponent*)Self)->OnChildAttached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_OnChildDetached(ULightComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_ULightComponent*)Self)->OnChildDetached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_OnComponentDestroyed(ULightComponent* Self, bool bDestroyingHierarchy)
	{
		auto _p0 = bDestroyingHierarchy;
		Self->OnComponentDestroyed(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_OnHiddenInGameChanged(ULightComponent* Self)
	{
		((E_PROTECTED_WRAP_ULightComponent*)Self)->OnHiddenInGameChanged_WRAP();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnRegister(ULightComponent* Self)
	{
		Self->OnRegister();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnUnregister(ULightComponent* Self)
	{
		Self->OnUnregister();
	}
	DOTNET_EXPORT auto E_ULightComponent_OnUpdateTransform(ULightComponent* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->OnUpdateTransform(_p0, _p1);
	}
	DOTNET_EXPORT auto E_ULightComponent_OnVisibilityChanged(ULightComponent* Self)
	{
		((E_PROTECTED_WRAP_ULightComponent*)Self)->OnVisibilityChanged_WRAP();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostNetReceive(ULightComponent* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_ULightComponent_PostRepNotifies(ULightComponent* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_ULightComponent_PreNetReceive(ULightComponent* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_ULightComponent_PropagateLightingScenarioChange(ULightComponent* Self)
	{
		Self->PropagateLightingScenarioChange();
	}
	DOTNET_EXPORT auto E_ULightComponent_SetRelativeScale3D(ULightComponent* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_ShouldCollideWhenPlacing(ULightComponent* Self)
	{
		return Self->ShouldCollideWhenPlacing();
	}
	DOTNET_EXPORT auto E_ULightComponent_ShouldCreateRenderState(ULightComponent* Self)
	{
		return Self->ShouldCreateRenderState();
	}
	DOTNET_EXPORT auto E_ULightComponent_UpdatePhysicsVolume(ULightComponent* Self, bool bTriggerNotifiers)
	{
		auto _p0 = bTriggerNotifiers;
		Self->UpdatePhysicsVolume(_p0);
	}
	DOTNET_EXPORT auto E_ULightComponent_Activate(ULightComponent* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}